gc分析